--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "graphql": "^0.13.2",
-    "koa": "^2.5.0",
-    "koa-graphql": "^0.7.5"
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2"
   }
 }
