--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
+    "express-graphql": "^0.6.12"
+  },
+  "devDependencies": {
     "graphql": "^0.13.2"
   }
 }
